# ResumeParsing

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/methods/: new.py  old.py
app/utils/: synonym.py
parsing/: __init__.py
parsing/core/: config.py  parser.py
parsing/extractors/: entity_extractor.py  pdf_extractor.py  text_cleaner.py
parsing/models/: schemas.py
parsing/tests/: test_parser.py
parsing/utils/: patterns.py  skills_database.py
